all targets activated in script/install

--- a/script/install
+++ b/script/install
@@ -78,14 +78,14 @@ function git_init {
 	cd $dir
 }
 
-#source script/installation/dependencies
-#source script/installation/ruby
-#source script/installation/rubygems
+source script/installation/dependencies
+source script/installation/ruby
+source script/installation/rubygems
 source script/installation/rails
-#source script/installation/R
-#source script/installation/openbabel
-#source script/installation/gems
-#source script/installation/plugins
+source script/installation/R
+source script/installation/openbabel
+source script/installation/gems
+source script/installation/plugins
 
 $rake app:install
 
