--- a/README.rdoc
+++ b/README.rdoc
@@ -30,7 +30,7 @@ You will have to install the prerequisites with your favorite package manager. P
 === Install programs, libraries, plugins and data
 
 - Move into the directory (e.g. <tt>cd /var/www/lazar-gui</tt>)
-- Run <tt>script/install</tt>
+- Run <tt>script/app-install</tt>
 
 This will download and install further programs, libraries, plugins and data that are required to run the GUI. The initial installation is quite time consuming, because we have to compile programs and libraries to obtain platform independence.
 
@@ -51,7 +51,7 @@ If performance is an issue, you can use Thin (http://code.macournoyer.com/thin/)
 - Stop the GUI server: <tt>vendor/bin/thin stop</tt>
 - Stop the lazar daemon: <tt>vendor/bin/rake lazar:daemon:stop RAILS_ENV=production</tt>
 - Get the update: <tt>git pull</tt>
-- Rerun the installation scripts: <tt>script/install</tt> 
+- Rerun the installation scripts: <tt>script/app-upgrade</tt> 
 - Start the <tt>lazar</tt> daemon: <tt>vendor/bin/rake lazar:daemon:start RAILS_ENV=production</tt>
 - Start the GUI server: <tt>vendor/bin/thin start -d -p 8000 -e production</tt>
 
