--- a/README.textile
+++ b/README.textile
@@ -37,27 +37,27 @@ h2. Examples
 
 h3. Display all available models
 
-	@> curl -X GET http://localhost:3000/models@
+	@curl -X GET http://localhost:3000/models@
 
 h3. Display information for a single model
 
-	@> curl -X GET http://localhost:3000/models/1@
+	@curl -X GET http://localhost:3000/models/1@
 
 Note: Detailed model annotations (data sources, endpoint definitions, validatin results, ...) will be provided by a separate component.
 
 h3. Predict rodent carcinogenicity (CPDB multi_cell_call) for Aniline
 
-	@> curl -X GET http://localhost:3000/models/1?smiles=c1cccc1N@
+	@curl -X GET http://localhost:3000/models/1?smiles=c1cccc1N@
 
 Important: Smiles strings have to be URL encoded!
 
 h3. Create a new prediction model for hamster carcinogenicity
 
-	@> curl -X POST -F structure_file=@hamster_carcinogenicity.smi -F activity_file=@hamster_carcinogenicity.class -F username=test -F password=test http://localhost:3000/models@
+	@curl -X POST -F structure_file=@hamster_carcinogenicity.smi -F activity_file=@hamster_carcinogenicity.class -F username=secret -F password=secret http://localhost:3000/models@
 
 h3. Delete a model
 
-	@> curl -X DELETE -d username=test -d password=test http://localhost:3000/models/1@
+	@curl -X DELETE -d username=secret -d password=secret http://localhost:3000/models/1@
 
 h2. Error codes
 
@@ -68,4 +68,9 @@ h2. Error codes
 
 h2. Installation
 
+* Get the source code
+
+	@git clone git@github.com:helma/lazar-webservice.git@
+
+* 
 to be completed
