README textile numbering removed

--- a/README.textile
+++ b/README.textile
@@ -68,20 +68,25 @@ h2. Error codes
 
 h2. Installation
 
-# Get the source code for the webservice
+* Get the source code for the webservice
 
 	@git clone git@github.com:helma/lazar-webservice.git@
 
-# Install lazar-core and prepare the lazar webservice
+* Install lazar-core and prepare the lazar webservice
 
+	@cd lazar-webservice@
 	@rake lazar:setup@
 
 	If lazar-core does not compile
 		
 		* Make sure, that you have the development libraries "Swig":www.swig.org, "GSL":www.gnu.org/software/gsl, "Boost":www.boost.org, "OpenBabel":openbabel.org, "R":www.r-project.org installed
+		* Configure R with @./configure --without-blas --enable-BLAS-shlib --enable-R-shlib@
+		* Install the R kernlab package:
+			@wget http://cran.r-project.org/src/contrib/kernlab_0.9-8.tar.gz@
+			@R CMD INSTALL kernlab_0.9-8.tar.gz@
 		* Check the paths in the Makefile of lib/lazar-core and adjust them to your system settings
 
-# Start the service
+* Start the service
 
 	@script/server@
 
